# aws-cloud-architecture

./: .env.example  .gitignore  README.md  deploy-backend.sh  deploy-frontend.sh  setup-aws-infrastructure.sh
.kiro/specs/gcp-to-aws-migration/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .dockerignore  Dockerfile  bedrock_client.py  buildspec.yml  dynamodb_client.py  main.py  pyproject.toml
docs/: aws-infrastructure-setup.md
frontend/: 404.html  app.js  index.html  styles.css
frontend/icons/: aws.json  custom.json
utils/: convert_icons.py
