[project]
name = "backend"
version = "0.1.0"
description = "Cloud Architecture Diagram Generator Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.2",
    "uvicorn[standard]>=0.37.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
